// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Convert select field to lookup should convert inline template with module 1`] = `
"import { NgModule } from '@angular/core';
import { TestComponent } from './test.component';
import { AsyncPipe } from '@angular/common';

@NgModule({
declarations: [TestComponent],
imports: [SkySelectFieldModule, NgModel, AsyncPipe],
exports: [TestComponent],
})
export class TestModule {}"
`;

exports[`Convert select field to lookup should convert select field to lookup 1`] = `
"import { Component } from '@angular/core';

@Component({
selector: 'app-test',
standalone: false,
templateUrl: './test.component.html',
styleUrl: './test.component.scss'
})
export class TestComponent {

}"
`;

exports[`Convert select field to lookup should convert select field to lookup 2`] = `
"import { NgModule } from '@angular/core';
import { CommonModule, NgIf } from '@angular/common';
import { TestComponent } from './test.component';
import { NgModel } from '@angular/forms';



@NgModule({
declarations: [
TestComponent
],
imports: [
CommonModule,
NgIf,
NgModel
]
})
export class TestModule { }"
`;

exports[`Convert select field to lookup should convert select field to lookup using template expressions 1`] = `
"import { Component } from '@angular/core';
import { AsyncPipe } from '@angular/common';

@Component({
selector: 'app-test',
imports: [
AsyncPipe
],
templateUrl: './test.component.html',
styleUrl: './test.component.scss'
})
export class TestComponent {

}"
`;
